# robometer-policy-learning

./: .gitignore  LICENSE  README.md  pyproject.toml
robometer_policy_learning/algorithms/diffusion_mile/: __init__.py  configuration_diffusion_mile.py  modeling_diffusion_mile.py
robometer_policy_learning/algorithms/dp/: configuration_dp.py
robometer_policy_learning/algorithms/flow_matching/: __init__.py  configuration_flow.py  modeling_flow.py
robometer_policy_learning/algorithms/flow_mile/: __init__.py  configuration_flow_mile.py  modeling_flow_mile.py
robometer_policy_learning/algorithms/mile/: __init__.py  configuration_mile.py  modeling_mile.py
robometer_policy_learning/buffers/: base_replay_buffer.py  samplers.py
robometer_policy_learning/configs/: register.py  robomimic_bc.yaml  robomimic_collect_hgdagger.yaml  robomimic_collect_hitl.yaml  robomimic_hgdagger.yaml  robomimic_hitl.yaml  robomimic_image_bc.yaml  robomimic_image_dp.yaml  robomimic_lowdim_bc.yaml  robomimic_lowdim_dp.yaml  robomimic_lowdim_flow.yaml  robosuite.yaml
robometer_policy_learning/configs/algorithm/: diffusion_mile.yaml  dp.yaml  flow.yaml  flow_mile.yaml  mile.yaml
robometer_policy_learning/envs/: libero_pi0_wrapper.py  robosuite_wrappers.py
robometer_policy_learning/rollouts/: evaluation_worker.py
robometer_policy_learning/utils/: hitl_utils.py  hitl_utils_publish.py  training_utils.py
scripts/: check_robomimic_dataset.py  check_state_alignment.py  collect_hitl_rollout.py  collect_hitl_rollouts_publish.py  collect_warmup_demos.py  convert_robomimic_to_aligned.py  eval_policy.py  inspect_obs_stats.py  train.py  train_hitl.py  train_hitl_publish.py  train_supervised.py
