
# ==================================================================================
# Project Metadata
# Defines core information about the package.
# ==================================================================================
[project]
name = "robometer-policy-learning"
version = "0.0.1"
readme = "README.md"
requires-python = "==3.11.*"

# ==================================================================================
# Dependencies
# This section lists the direct dependencies of your project.
# It is best practice to list only the packages your code directly imports,
# not every package from your environment. Tools like 'uv' or 'pip' will
# resolve and install the dependencies of these packages automatically.
# ==================================================================================
dependencies = [
    # Core ML/RL libraries
    "torch>=2.0.0",
    "torchvision",
    "gymnasium>=0.29.0",
    "gym",
    "metaworld",
    # Model libraries (for reward models and transformers)
    "transformers>=4.57.0",
    "sentence-transformers>=2.0.0",
    "huggingface-hub>=0.35.0",
    # Data handling
    "h5py>=3.10.0",
    "numpy>=1.21.0",
    "pyyaml>=6.0.0",
    # Logging
    "wandb>=0.20.1",
    "tensorboard>=2.14.0",
    "loguru",
    # Utilities
    "tqdm>=4.67.1",
    "rich>=14.0.0",
    "omegaconf>=2.3.0",
    # Image processing (for vision-based RL)
    "pillow>=9.0.0",
    "opencv-python-headless>=4.8.0",
    "imageio>=2.37.0",
    "unsloth==2025.10.11",
    "unsloth-zoo==2025.10.12",
    "xformers==0.0.32.post2",
    "trl==0.20.0",
    "robometer",
    "grpcio-tools>=1.76",
    "hydra-core==1.3.2",
    "cmake<4.0",
    # LIBERO dependencies
    "libero",
    "easydict==1.9",
    "robomimic==0.2.0",
    "thop==0.1.1.post2209072238",
    "robosuite==1.4.0",
    "bddl==1.0.1",
    "future==0.18.2",
    "cloudpickle==2.1.0",
    # OpenPI (Pi0)
    "openpi",
    "diffusers>=0.38.0",
    "pynput>=1.8.2",
    "hidapi>=0.15.0",
]

[project.urls]
Repository = "https://github.com/ygtkorkmaz/rfm_rl"

# ==================================================================================
# Optional Dependencies
# These are groups of dependencies for specific purposes, like development or
# running optional features. Install with `uv pip install .[dev]`
# ==================================================================================
[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
    "ipykernel",
    "ipywidgets",
    "ipdb>=0.13.13",
    # Box2D envs (LunarLander) for integration tests
    "swig>=4.0.0",
    "box2d-py>=2.3.5",
    "pygame>=2.1.0",
]

# Paths match git submodules (see .gitmodules). The PyPI name "openpi" is installed from the dsrl_openpi checkout.
[tool.uv.sources]
robometer = { path = "./robometer", editable = true }
libero = { path = "./LIBERO", editable = true }
openpi = { path = "./dsrl_openpi", editable = true }

# ==================================================================================
# Build System
# Specifies how your project should be packaged. Hatchling is a modern,
# fast, and recommended build backend.
# ==================================================================================
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["robometer_policy_learning"]

[tool.hatch.metadata]
allow-direct-references = true

# ==================================================================================
# Tool Configuration
# Settings for various development tools like 'uv', 'ruff' (linter), etc.
# ==================================================================================

# Configuration for the 'uv' package manager
[tool.uv]
extra-build-dependencies = { egl-probe = ["cmake<4.0"] }
override-dependencies = [
    "transformers>=4.57.0,<5",
    "jax[cuda12]>=0.5.3,<0.7.0",  # 0.6.x has better bf16 support but keeps DeviceLocalLayout API
    "gymnasium>=1.2.2", # override lerobot dependency (stemming from openpi repo)
    "protobuf>3.21",
]


# Tool configuration for the 'ruff' linter and formatter
[tool.ruff]
line-length = 120
target-version = "py311"
fix = true
unsafe-fixes = true

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "RUF"]
ignore = ["T201"]

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = true

# ==================================================================================
# Pytest Configuration
# ==================================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: end-to-end tests that build envs + models (may be slow)",
]
addopts = "-v --tb=short"

